--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-keep-awake": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
