--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@react-native-async-storage/async-storage": "^1.15.7",
     "expo": "~42.0.1",
     "expo-keep-awake": "~9.2.0",
+    "expo-splash-screen": "^0.11.4",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
