--- a/app.json
+++ b/app.json
@@ -19,6 +19,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.zamanShahed.focusTime",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/timer.png",
         "backgroundColor": "#3c6382"
