--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "Focus Time",
+    "name": "focusTime",
     "description": "Time to focus on one specific task or event that you care !",
     "slug": "focusTime",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/timer.png",
     "splash": {
@@ -11,23 +11,13 @@
       "resizeMode": "contain",
       "backgroundColor": "#3c6382"
     },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.zamanShahed.focusTime",
+      "buildNumber": "1.0.1"
     },
     "android": {
       "package": "com.zamanShahed.focusTime",
-      "versionCode": 1,
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/timer.png",
-        "backgroundColor": "#3c6382"
-      }
-    },
-    "web": {
-      "favicon": "./assets/timer.png"
+      "versionCode": 2
     }
   }
 }
